# smc-language

./: Cargo.toml  README.md  defines.txt  labels.txt  operations.txt
crates/assembler/: Cargo.toml
crates/assembler/src/: assembler.rs  lib.rs  main.rs  save.rs
crates/assembler/src/assembler/: mod.rs
crates/assembler/src/assembler/backends/: batpu2_mattbatwings_none.rs  mod.rs  tau_analyzers_none.rs
crates/assembler/src/lexer/: mod.rs  token.rs
crates/assembler/src/parser/: mod.rs  operations.rs
crates/assembler/src/save/: convert.rs  mod.rs
crates/assembler/src/save/memory/: batpu2_instruction_memory.rs  mod.rs
crates/assembler/tests/: calculator.rs  integration.rs  mod.rs
crates/assembler/tests/batpu2/: mod.rs
crates/assembler/tests/batpu2/programs/: 2048.smc  connect4.smc  maze.smc  minesweeper.smc
crates/assembler/tests/programs/: calculator.smc  dvd.smc  gol.smc  tetris.smc
crates/assembler/tests/tau/: mod.rs
crates/assembler/tests/tau/expected/: ball.tau  tetris.tau
crates/assembler/tests/tau/programs/: ball.tasm  tetris.tasm
crates/macros/src/: lib.rs
crates/smc-assembler/src/parser/: mod.rs
crates/smc-lsp/src/: main.rs
programs/: 2048.smc
src/: assembler.rs  main.rs
src/lexer/: mod.rs  token.rs
