[workspace]
resolver = "3"

members = ["crates/*"]

default-members = ["crates/assembler"]

[workspace.package]
version = "0.2.0"
authors = ["Bjorn Beishline"]
license = "MIT"
edition = "2024"
repository = "https://github.com/BjornTheProgrammer/smc-language"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5.54", features = ["derive"] }
thiserror = "2.0.17"
arbitrary-int = "2.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3" }
