[package]
name = "smc-assembler"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
smc-macros = { version = "0.2.0", path = "../macros" }

anyhow = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
arbitrary-int = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

strum = "0.27"
strum_macros = "0.27"

mc_schem = "1.1"

[dev-dependencies]
pretty_assertions = "1"
